@@ -6,92 +6,93 @@ import com.example.backend.exception.ErrorCode;
 import com.example.backend.jenkins.info.model.JenkinsInfo;
 import com.example.backend.jenkins.info.service.JenkinsInfoService;
 import com.example.backend.jenkins.job.model.Pipeline;
+import com.example.backend.jenkins.job.model.PipelineVersion;
 import com.example.backend.jenkins.job.model.Script;
+import com.example.backend.jenkins.job.model.Stage;
 import com.example.backend.jenkins.job.model.dto.RequestDto;
 import com.example.backend.jenkins.job.model.dto.ResponseDto;
 import com.example.backend.jenkins.job.repository.PipelineRepository;
 import com.example.backend.service.HttpClientService;
+import com.example.backend.util.ScriptEditUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class PipelineService {
 
-    private final ApplicationEventPublisher publisher;
     private final HttpClientService httpClientService;
     private final JenkinsInfoService jenkinsInfoService;
     private final ConfigService configService;
     private final ScriptService scriptService;
+    private final ScriptEditUtil scriptEditUtil;
     private final PipelineRepository pipelineRepository;
+    private final StageService stageService;
+    private final CompensationService compensationService;
 
+    /**
+     * Create a new Jenkins job and persist the pipeline.
+     */
     @Transactional
-    public void createJob(RequestDto.CreateDto requestDto) {
+    public void createJob(RequestDto.CreateDto dto) {
+        JenkinsInfo info = jenkinsInfoService.getJenkinsInfo(dto.getInfoId());
+        ensureUniqueName(info.getId(), dto.getName());
 
-        // jenkins info에 같은 name이 존재하는지 검증
-        if (pipelineRepository.findByJenkinsInfoIdAndName(requestDto.getInfoId(), requestDto.getName()).isPresent()) {
-            throw new CustomException(ErrorCode.JENKINS_JOB_EXIST);
-        }
-        Script script = requestDto.getScriptId() != null ? scriptService.getScriptById(requestDto.getScriptId()) : null;
+        Script script = loadScript(dto.getScriptId());
+        String config = buildConfig(dto, script);
 
-        // jenkins info 확인
-        JenkinsInfo info = jenkinsInfoService.getJenkinsInfo(requestDto.getInfoId());
+        Pipeline pipeline = savePipeline(dto, info, script, config);
 
-
-        String config = configService.createConfig(
-                configService.buildConfigContext(requestDto, script));
-
-        String jenkinsUrl = info.getUri()
-                + "/createItem?name=" + requestDto.getName();
-        Pipeline pipeline = RequestDto.toEntity(requestDto,
-                info,
-                script,
-                config);
-
-        // job 저장
-        Pipeline saved = pipelineRepository.save(pipeline);
-
-        info.getPipelineList().add(pipeline);
-
-        publisher.publishEvent(new JobEvent.JobCreatedEvent(saved.getId(), saved.getConfig(), jenkinsUrl));
+        callJenkins(info.getUri() + "/createItem?name=" + dto.getName(),
+                config, info, HttpMethod.POST,
+                () -> compensationService.deletePipeline(pipeline.getId()));
     }
 
+    /**
+     * Update an existing Jenkins job or recreate if renamed.
+     */
     @Transactional
-    public void updateJob(RequestDto.UpdateDto requestDto) {
-
-        // job 검색 & info 가져오기
-        Pipeline pipeline = getPipelineById(requestDto.getPipelineId());
+    public void updateJob(RequestDto.UpdateDto dto) {
+        Pipeline pipeline = getPipelineById(dto.getPipelineId());
         JenkinsInfo info = pipeline.getJenkinsInfo();
-        Script script = requestDto.getScriptId() != null ? scriptService.getScriptById(requestDto.getScriptId()) : null;
+        String preName = pipeline.getName();
+        boolean isRenamed = isRenamed(preName, dto);
 
-        // jenkins info에 같은 name이 존재하는지 검증
-        Optional<Pipeline> pipelineOptional = pipelineRepository.findByJenkinsInfoIdAndName(info.getId(), requestDto.getName());
-        if (pipelineOptional.isPresent()) {
-            Pipeline existing = pipelineOptional.get();
-            if (!existing.equals(pipeline)) {
-                throw new CustomException(ErrorCode.JENKINS_JOB_EXIST);
-            }
+        Script script = loadScript(dto.getScriptId());
+
+        RequestDto.CreateDto createDto = RequestDto.toCreateDto(dto, info.getId());
+        String config = buildConfig(createDto, script);
+        applyPipelineChanges(pipeline, createDto, script, config);
+
+        if (isRenamed) {    // 수정할 Job 이름이 다를 때
+            // 이미 존재하는 이름인지 검사
+            ensureUniqueName(info.getId(), dto.getName(), pipeline);
+
+            // 기존 job 삭제 요청
+            deleteJobOnJenkins(info, preName, () -> compensationService.rollback());
+            // 생성 요청
+            callJenkins(info.getUri() + "/createItem?name=" + dto.getName(),
+                    config, info, HttpMethod.POST,
+                    () -> compensationService.rollback());
+        } else {        // 수정할 Job 이름이 같을 때
+            // 수정 요청
+            callJenkins(info.getUri() + "/job/" + dto.getName() + "/config.xml",
+                    config, info, HttpMethod.POST, () -> compensationService.rollback());
         }
-
-        // job 수정 요청
-        String jenkinsUrl = info.getUri() + "/job/" + requestDto.getName() + "/config.xml";
-        RequestDto.CreateDto createDto = RequestDto.toCreateDto(requestDto);
-        String config = configService.createConfig(configService.buildConfigContext(createDto, script));
-
-        // 수정된 job 저장
-        Pipeline newPipeline = Pipeline.updatePipeline(pipeline, requestDto, config);
-        pipelineRepository.save(newPipeline);
-
-        publisher.publishEvent(new JobEvent.JobUpdatedEvent(newPipeline.getId(), newPipeline.getConfig(), jenkinsUrl));
     }
 
     public Pipeline getPipelineById(UUID id) {
@@ -102,45 +103,190 @@ public class PipelineService {
     @Transactional
     public void softDeletePipelineById(UUID id) {
         Pipeline pipeline = getPipelineById(id);
-
-        pipeline.setIsDeleted(true);
         pipeline.setDeletedAt(LocalDateTime.now());
-
+        pipeline.setIsDeleted(true);
         pipelineRepository.save(pipeline);
+        deleteJobOnJenkins(pipeline.getJenkinsInfo(), pipeline.getName(), () -> compensationService.softDeletePipeline(pipeline, null, false));
     }
 
     @Transactional
     public void hardDeletePipelineById(UUID id) {
-        Pipeline pipeline = getPipelineById(id);
-
-        pipelineRepository.delete(pipeline);
+        pipelineRepository.delete(getPipelineById(id));
     }
 
     public List<ResponseDto.LightJobDto> getLightJobs(UUID jenkinsInfoId) {
-        return pipelineRepository.findActiveWithScriptByJenkinsInfoId(jenkinsInfoId)
-                .stream().map(ResponseDto::entityToLightJobDto).toList();
+        return pipelineRepository.findActiveWithScriptByJenkinsInfoId(jenkinsInfoId).stream()
+                .map(ResponseDto::entityToLightJobDto)
+                .collect(Collectors.toList());
     }
 
     public List<ResponseDto.LightJobDto> getDeletedLightJobs(UUID jenkinsInfoId) {
-        return pipelineRepository.findDeletedWithScriptByJenkinsInfoId(jenkinsInfoId)
-                .stream().map(ResponseDto::entityToLightJobDto).toList();
+        return pipelineRepository.findDeletedWithScriptByJenkinsInfoId(jenkinsInfoId).stream()
+                .map(ResponseDto::entityToLightJobDto)
+                .collect(Collectors.toList());
     }
 
     public ResponseDto.DetailJobDto getDetailJob(UUID jobId) {
-
         return ResponseDto.entityToDetailJobDto(getPipelineById(jobId));
     }
 
-    // Pipeline 권한 확인하는 AOP
     public boolean isOwner(Users user, UUID pipelineId) {
-
         Pipeline pipeline = pipelineRepository.findWithInfoAndScriptAndUserById(pipelineId)
                 .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_JOB_NOT_FOUND));
-        JenkinsInfo info = pipeline.getJenkinsInfo();
-        UUID userId = user.getId();
-        UUID confirmUserId = info.getUser().getId();
-        log.info(user.getId().toString());
-        log.info(info.getUser().getId().toString());
-        return userId.equals(confirmUserId);
+        return user.getId().equals(pipeline.getJenkinsInfo().getUser().getId());
     }
+
+    private void ensureUniqueName(UUID infoId, String name) {
+        pipelineRepository.findByJenkinsInfoIdAndName(infoId, name)
+                .ifPresent(p -> {
+                    throw new CustomException(ErrorCode.JENKINS_JOB_EXIST);
+                });
+    }
+
+    private void ensureUniqueName(UUID infoId, String name, Pipeline current) {
+        pipelineRepository.findByJenkinsInfoIdAndName(infoId, name)
+                .filter(p -> !p.getId().equals(current.getId()))
+                .ifPresent(p -> {
+                    throw new CustomException(ErrorCode.JENKINS_JOB_EXIST);
+                });
+    }
+
+    private boolean isRenamed(String previousName, RequestDto.UpdateDto dto) {
+        return !previousName.equals(dto.getName());
+    }
+
+    private Script loadScript(UUID scriptId) {
+        return scriptId != null ? scriptService.getScriptById(scriptId) : null;
+    }
+
+    private String buildConfig(RequestDto.CreateDto dto, Script script) {
+        return configService.createConfig(
+                configService.buildConfigContext(dto, script)
+        );
+    }
+
+    private Pipeline savePipeline(RequestDto.CreateDto dto, JenkinsInfo info, Script script, String config) {
+        Pipeline entity = RequestDto.toEntity(dto, info);
+        saveVersion(entity, script, config, dto);
+        Pipeline saved = pipelineRepository.save(entity);
+        pipelineRepository.flush();
+        return saved;
+    }
+
+    private void createStages(PipelineVersion pipelineVersion, Script script) {
+        List<String> names = extractStageNames(script);
+        for (int i = 0; i < names.size(); i++) {
+            Stage stage = Stage.builder()
+                    .orderIndex(i)
+                    .name(names.get(i))
+                    .pipelineVersion(pipelineVersion)
+                    .build();
+            pipelineVersion.getStageList().add(stage);
+        }
+    }
+
+    private List<String> extractStageNames(Script script) {
+        if (script == null) return Collections.emptyList();
+        return scriptEditUtil.extractStageNames(script.getScript())
+                .stream()
+                .map(s -> s.toUpperCase().replaceAll("\\W+", "_"))
+                .collect(Collectors.toList());
+    }
+
+    private void applyPipelineChanges(Pipeline pipeline, RequestDto.CreateDto dto, Script script, String config) {
+        pipeline.setName(dto.getName());
+        pipeline.setUpdatedAt(LocalDateTime.now());
+
+        saveVersion(pipeline, script, config, dto);
+
+        pipelineRepository.save(pipeline);
+        pipelineRepository.flush();
+    }
+
+    private void callJenkins(String url, String body, JenkinsInfo info, HttpMethod method, Runnable onError) {
+        HttpEntity<String> req = new HttpEntity<>(
+                body,
+                httpClientService.buildHeaders(
+                        info,
+                        new MediaType("application", "xml", StandardCharsets.UTF_8)
+                )
+        );
+        try {
+            httpClientService.exchange(url, method, req, String.class);
+        } catch (Exception e) {
+            if (onError != null) onError.run();
+            throw e;
+        }
+    }
+
+    private void deleteJobOnJenkins(JenkinsInfo info, String name, Runnable onError) {
+        String url = info.getUri() + "/job/" + name + "/doDelete";
+        HttpEntity<String> req = new HttpEntity<>(
+                httpClientService.buildHeaders(info, MediaType.APPLICATION_FORM_URLENCODED)
+        );
+        try {
+            httpClientService.exchange(url, HttpMethod.POST, req, String.class);
+        } catch (CustomException e) {
+            if (!ErrorCode.INVALID_ENDPOINT.equals(e.getErrorCode())) {
+                if (onError != null) onError.run();
+                throw e;
+            }
+        }
+    }
+
+
+    @Transactional
+    public void restorationJob(UUID pipelineId) {
+        Pipeline pipeline = getPipelineById(pipelineId);
+        PipelineVersion pipelineVersion = getLatestVersion(pipeline);
+        JenkinsInfo info = pipeline.getJenkinsInfo();
+        LocalDateTime time = pipeline.getDeletedAt();
+
+        ensureUniqueName(info.getId(), pipeline.getName(), pipeline);
+
+        compensationService.softDeletePipeline(pipeline, null, false);
+
+        String config = pipelineVersion.getConfig();
+
+        callJenkins(info.getUri() + "/createItem?name=" + pipeline.getName(),
+                config, info, HttpMethod.POST,
+                () -> compensationService.softDeletePipeline(pipeline, time, true));
+    }
+
+    public List<ResponseDto.PipelineVersionDto> getPipelineVersions(UUID pipelineId) {
+        Pipeline pipeline = getPipelineById(pipelineId);
+        return pipeline.getVersionList().stream()
+                .map(ResponseDto::entityToPipelineVersionDto)
+                .toList();
+    }
+
+    public PipelineVersion getLatestVersion(Pipeline pipeline) {
+        int latestVersion = pipeline.getLatestVersion() - 1;
+
+        return pipeline.getVersionList().get(latestVersion);
+    }
+
+    //새 버전 저장
+    private void saveVersion(Pipeline pipeline, Script script, String config, RequestDto.CreateDto dto) {
+        Integer newVersion = Optional.ofNullable(pipeline.getLatestVersion()).orElse(0) + 1;
+        pipeline.setLatestVersion(newVersion);
+
+        PipelineVersion version = PipelineVersion.builder()
+                .version(newVersion)
+                .description(dto.getDescription())
+                .isTriggered(dto.getTrigger())
+                .schedule(dto.getSchedule())
+                .createdAt(LocalDateTime.now())
+                .config(config)
+                .isSuccessfulBuild(null)
+                .script(script)
+                .pipeline(pipeline)
+                .build();
+
+        createStages(version, script);
+
+        pipeline.getVersionList().add(version);
+    }
+
+
 }
